--- a/style.css
+++ b/style.css
@@ -145,6 +145,151 @@ a:hover {
 /* Section */
 
 section {
-    padding: 20px;
+    padding-top: 4vh;
+    height: 96vh;
+    margin: 0 10rem;
+    min-height: fit-content;
 }
 
+.section-container {
+    display: flex;
+}
+
+/* Profile*/
+
+#profile {
+    display: flex;
+    justify-content: center;
+    gap: 5rem;
+    height: 80vh;
+}
+
+.section_pic-container {
+    display: flex;
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
+    
+}
+
+.profilepicture {
+    border-radius: 100%;
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
+
+.section_text {
+    align-self: center;
+    text-align: center;
+}
+
+.section_text p {
+    font-weight: 600;
+}
+.section_text_p1 {
+    text-align: center;
+}
+.section_text_p2 {
+    font-size: 1.75rem;
+    margin-bottom: 1rem;
+}
+
+.title {
+    font-size: 3rem;
+    text-align: center;
+}
+
+#sosials-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    gap: 1rem;
+}
+
+/*Icon*/
+
+.icon {
+    cursor: pointer;
+    height: 2rem;
+    border-radius: 20%;
+}
+
+/* buttons */ 
+
+.btn-container {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.btn {
+    font-weight: 600;
+    transition: all 300ms ease;
+    padding: 1rem;
+    width: 8rem;
+    border-radius: 2rem;
+}
+
+.btn-color-1 {
+    border: rgb(53, 53, 53) 0.1rem solid;
+    background: rgb(53, 53, 53);
+    color: white;
+}
+
+.btn-color-2 {
+    background: none;
+    border: rgb(53, 53, 53) 0.1rem solid;
+}
+
+.btn-color-1:hover {
+    background-color: rgb(0, 0, 0);
+    cursor: pointer;
+}
+
+
+.btn-color-2:hover {
+    background: rgb(53, 53, 53);
+    color: white;
+    cursor: pointer;
+    border: rgb(255, 255, 255) 0.1rem solid;
+}
+
+/*about*/
+
+#about {
+    position: relative;
+}
+
+.about-containers {
+    gap: 2rem;
+    display: flex;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
+
+.about-details-container {
+    justify-content: center;
+    flex-direction: column;
+    display: flex;
+}
+
+.about-pic {
+    border-radius: 2rem;
+}
+
+.arrow {
+    position: absolute;
+    right: -5rem;
+    bottom: 2.5rem;
+}
+
+.details-container {
+    padding: 1.5rem;
+    flex: 1;
+    background: white;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    text-align: center;
+}
