--- a/style.css
+++ b/style.css
@@ -153,6 +153,9 @@ section {
 
 .section-container {
     display: flex;
+    gap: 4rem;
+    height: 80%;
+    justify-content: center;
 }
 
 /* Profile*/
@@ -169,7 +172,9 @@ section {
     height: 400px;
     width: 400px;
     margin: auto 0;
-    
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
 }
 
 .profilepicture {
@@ -177,6 +182,7 @@ section {
     width: 300px;
     height: 300px;
     object-fit: cover;
+    filter: grayscale(100%);
 }
 
 .section_text {
@@ -261,7 +267,7 @@ section {
     position: relative;
 }
 
-.about-containers {
+.about-container {
     gap: 2rem;
     display: flex;
     margin-bottom: 2rem;
@@ -276,12 +282,14 @@ section {
 
 .about-pic {
     border-radius: 2rem;
+    height: 350px;
 }
 
 .arrow {
     position: absolute;
     right: -5rem;
     bottom: 2.5rem;
+    transform: rotate(90deg);
 }
 
 .details-container {
@@ -292,4 +300,44 @@ section {
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
     text-align: center;
+    
+}
+
+/*experience*/
+
+#experience {
+    position: relative;
+}
+
+.experience-sub-title {
+    color: rgb(85, 85, 85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+}
+
+.experience-details-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.article-container {
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
+    
+}
+
+article {
+    display: flex;
+    width: 10rem;
+    gap: 0.5rem;
+}
+
+article .icon {
+    cursor: default;
 }
