--- a/style.css
+++ b/style.css
@@ -121,6 +121,10 @@ a:hover {
 
 .menu-links.open {
     max-height: 300px;
+    z-index: 1;
+    border-radius: 10px;
+    background-color: rgb(219, 219, 219);
+    padding:5px;
 }
 
 .hamburger-icon.open span:first-child {
